# photos_app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
gallery/: constants.py  models.py  utils.py  views.py
gallery/management/commands/: record_images.py
gallery/migrations/: 0001_initial.py  0002_delete_imagetag_delete_tag.py  0003_image_tags.py
gallery/templates/gallery/: 404.html  image.html  image_list.html
photoviewer/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
tagger/: models.py
tagger/corpus/: __init__.py
tagger/corpus/EN/: descriptions.txt  items.txt
tagger/corpus/ES/: descriptions.txt  items.txt
tagger/management/commands/: tag_images.py
tagger/migrations/: 0001_initial.py
tagger/neural_networks/: clip.py
